# passman

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  crypto.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs
tests/: test_crypto.rs  test_db.rs  test_errors.rs  test_models.rs
