[package]
name = "passman"
version = "0.1.0"
edition = "2024"
authors = ["jawadelfidali@gmail.com"]
description = "A secure, memory-safe password manager written in Rust"
repository = "https://github.com/jawadtik06/passman"
license = "MIT"
keywords = ["password-manager", "security", "encryption", "cli"]
categories = ["command-line-utilities", "cryptography", "GUI"]

[dependencies]
# Encryption & cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Clipboard
arboard = "3.2"

# Terminal UI
dialoguer = "0.11"
console = "0.15"
clap = { version = "4.4", features = ["derive", "color"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
zeroize = "1.7"  # For zeroing sensitive memory

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true  # Remove debug symbols

[lib]
name = "passman"
path = "src/lib.rs"

[[bin]]
name = "passman"
path = "src/main.rs"
